--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     if (data.hasOwnProperty(key)) {
                         const attributes = data[key];
                     
-                        document.write(`Name: ${attributes.name} <br>`); 
+                        document.write(`Name -> ${attributes.name} <br>`); 
                     }
                 }
             } 
